Jul 09 1998      Add positional fix commands
                 Slightly increase hydrogen radius
Jul 14 1998	 Add routine to determine if a segment is amino acid (pre_protein)
		 Put modified residue name on sequence file
		 Number non chain link atoms from 3 up ( instead of all being 3)
		 Fix file name problem in pre_mkrst
		 Expand link array to include global atom number
		 Fix bug in solvation routine
	         Fix bug in bonded list overwrite in pre_mkfrg
		 More diagnostic messages added
		 Fix file name bug in explicit write rst command
Jul 15 1998	 Remove persistency new_top new_seq and new_rst
		 Resize solvent arrays when needed to read rst file
		 Allow coordinate read before solvation
		 Avoid write of ccordinates if explicit command given
		 Bug fix in restart file name
                 Read modified restart format
Jul 16 1998	 Change default value of xpndw to 0.2 nm
Aug 07 1998	 Initilization bug fix in pre_misfit
Aug 07 1998	 Initilization bug fix in pre_short
Aug 10 1998	 Add missing initialization angle constraints
Aug 13 1998	 Add POx in charge determination
Aug 18 1998	 Repair memory leak in pre_charge
		 Initialization bug fix in pre_mklist
		 Destroy geometry object when no longer needed in pre_mkseq
Aug 24 1998	 Add OH charge separation
		 Resolve varying number arguments
		 Single quote strings
Aug 26 1998	 Bug fix in pre_rdrst.F
Aug 28 1998	 Write out segment charges when writing topology file
Sep 11 1998	 Fix bugs in crystalwater coordinate from pdb
		 Fixes in PDB format statements
		 Allow choice of alternate location and chain id
		 Disallow bonds to Na, Mg, K and Ca
		 Default HIS to HID for amber when reading PDB without hydrogens
Sep 14 1998	 Option to limit CYS -> CYX to SS-bridges
		 Fix in chain links
		 Option to enforce link through LINK in sequence file
		 Bug fix in segments length for last segment frg's
Sep 16 1998	 Count LINK's to get dimension mlnk in seqsiz